[gd_scene load_steps=15 format=2]

[ext_resource path="res://bubMobBoss.gd" type="Script" id=1]
[ext_resource path="res://art/__Bat01_Fly_002.png" type="Texture" id=2]
[ext_resource path="res://art/popB.ogg" type="AudioStream" id=3]
[ext_resource path="res://art/__Bat01_Fly_000.png" type="Texture" id=4]
[ext_resource path="res://art/__Bat01_Fly_001.png" type="Texture" id=5]
[ext_resource path="res://art/__Bat01_Fly_003.png" type="Texture" id=6]
[ext_resource path="res://art/__Bat01_Fly_007.png" type="Texture" id=7]
[ext_resource path="res://art/__Bat01_Fly_004.png" type="Texture" id=8]
[ext_resource path="res://art/__Bat01_Fly_005.png" type="Texture" id=9]
[ext_resource path="res://art/__Bat01_Fly_006.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ) ],
"loop": true,
"name": "normal",
"speed": 18.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "bossHit"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.54902 ), Color( 1, 0, 0, 0.533333 ), Color( 1, 1, 1, 0.556863 ), Color( 1, 0, 0, 0.54902 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 139.432

[sub_resource type="CircleShape2D" id=4]
radius = 134.81

[node name="bubMobBoss" type="RigidBody2D"]
collision_layer = 6
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )
animation = "normal"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bossHit = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.56807, -6.16484 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )

[node name="stun_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="die_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="weHit" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="weHit"]
position = Vector2( -0.387697, -6.60709 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 4 )

[node name="popSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0
mix_target = 1

[connection signal="timeout" from="stun_timer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="die_timer" to="." method="_on_die_timer_timeout"]
[connection signal="area_entered" from="weHit" to="." method="_on_weHit_area_entered"]
